fix(styling): Fix overlapping text

--- a/root/frontend/react-src/src/navbar/Navbar.module.scss
+++ b/root/frontend/react-src/src/navbar/Navbar.module.scss
@@ -39,4 +39,8 @@ $nav-height: 55px;
         justify-content: space-between;
         height: 100%;
     }
+
+    a {
+        padding: 0 0.5rem;
+    }
 }
